--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,7 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+TwitterConsumerKey = "rTdfuKJRkVBSMQkI0NvvpIEcP"
+TwitterConsumerSecret = "VUzhBsJPXTRwbSrVra42MNECiwJkAbzmbakipsMuUtVA6OhQmF"
+TwitterTokenSecret = "fAH8nIsEA8PbZimtumwt5NxZI1LDJIk53zCcnkKMUlllK"
+TwitterToken = "761622854-H4MdpQLbs07ucLVtq2WVtpPRhkJrgeFGXQcbnvFJ"
