--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
             android:theme="@style/AppLoginTheme"
             tools:replace="android:theme" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".UI.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -57,7 +57,7 @@
                 <data android:scheme="@string/ak_login_protocol_scheme" />
             </intent-filter>
         </activity>
-        <activity android:name=".AccountActivity" />
+        <activity android:name=".UI.AccountActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -71,13 +71,13 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".FindMeActivity"
+            android:name=".maps.FindMeActivity"
             android:label="@string/title_activity_find_me" />
         <activity
-            android:name=".SettingsActivity"
+            android:name=".UI.SettingsActivity"
             android:label="@string/title_activity_settings" />
-        <activity android:name=".NewReportActivity" />
-        <activity android:name=".HistoryActivity" />
+        <activity android:name=".UI.NewReportActivity" />
+        <activity android:name=".UI.HistoryActivity" />
 
         <receiver android:name=".NetWatcher">
             <intent-filter>
@@ -86,29 +86,21 @@
         </receiver>
 
         <service
-            android:name=".SyncService"
+            android:name=".services.SyncService"
             android:enabled="true"
             android:exported="true" />
 
-
+        <activity android:name=".UI.StagesActivity" />
+        <activity android:name=".UI.StagesListActivity" />
         <activity
-            android:name=".StagesActivity" />
-        <activity
-            android:name=".StagesListActivity">
-
-        </activity>
-
-        <activity
-            android:name=".MapsActivity"
-
+            android:name=".maps.MapsActivity"
             android:label="@string/title_activity_maps"
-             android:theme="@style/AppTheme.NoActionBar"/>
-
-        <activity android:name=".SpeedActivity"
-            android:theme="@style/AppTheme">
-
-        </activity>
-
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".UI.SpeedActivity"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".UI.TweetsActivity" />
+        <activity android:name=".UI.SpecificTweetActivity"></activity>
     </application>
 
 </manifest>
