--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
         it.buildConfigField 'String', 'TWITTER_TOKEN_SECRET', TwitterTokenSecret
         it.buildConfigField 'String', 'TWITTER_TOKEN', TwitterToken
     }
+    sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
 }
 
 dependencies {
