--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,7 +92,8 @@
             android:name=".UI.SettingsActivity"
             android:label="@string/title_activity_settings" />
         <activity android:name=".UI.NewReportActivity" />
-        <activity android:name=".UI.HistoryActivity" />
+        <activity android:name=".UI.HistoryActivity"
+            android:theme="@style/AppTheme"/>
 
         <receiver android:name=".NetWatcher">
             <intent-filter>
@@ -117,8 +118,7 @@
         </activity>
         <activity
             android:name=".maps.MapsActivity"
-            android:label="@string/title_activity_maps"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/Yonko">
             <meta-data
             android:name="android.support.PARENT_ACTIVITY"
             android:value="com.chris.tatusafety.MainActivity" /></activity>
@@ -136,7 +136,6 @@
         <activity android:name=".UI.SpecificTweetActivity" />
         <activity
             android:name=".UI.HelpActivity"
-
             android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
