--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,6 @@
         android:protectionLevel="signature" />
 
     <uses-permission android:name="com.chris.tatusafety.permission.MAPS_RECEIVE" />
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -29,7 +28,10 @@
 
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -38,9 +40,9 @@
         android:roundIcon="@drawable/tatu_logo_02"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <meta-data android:name="com.google.android.gms.version"
+        <meta-data
+            android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
         <meta-data
             android:name="com.facebook.accountkit.ApplicationName"
             android:value="@string/app_name" />
@@ -61,9 +63,7 @@
             tools:replace="android:theme" />
         <activity
             android:name=".UI.LoginActivity"
-           android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name="com.facebook.accountkit.ui.AccountKitEmailRedirectActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -84,7 +84,6 @@
              You can define the keys for the debug and release targets in src/debug/ and src/release/. 
         -->
 
-
         <activity
             android:name=".maps.FindMeActivity"
             android:label="@string/title_activity_find_me" />
@@ -92,8 +91,9 @@
             android:name=".UI.SettingsActivity"
             android:label="@string/title_activity_settings" />
         <activity android:name=".UI.NewReportActivity" />
-        <activity android:name=".UI.HistoryActivity"
-            android:theme="@style/AppTheme"/>
+        <activity
+            android:name=".UI.HistoryActivity"
+            android:theme="@style/AppTheme" />
 
         <receiver android:name=".NetWatcher">
             <intent-filter>
@@ -106,22 +106,23 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".UI.StagesActivity" >
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value="com.chris.tatusafety.MainActivity" />
-        </activity>
-        <activity android:name=".UI.StagesListActivity" >
+        <activity android:name=".UI.StagesActivity">
             <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value="com.chris.tatusafety.MainActivity" />
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.chris.tatusafety.MainActivity" />
+        </activity>
+        <activity android:name=".UI.StagesListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.chris.tatusafety.MainActivity" />
         </activity>
         <activity
             android:name=".maps.MapsActivity"
             android:theme="@style/Yonko">
             <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value="com.chris.tatusafety.MainActivity" /></activity>
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.chris.tatusafety.MainActivity" />
+        </activity>
         <activity
             android:name=".UI.SpeedActivity"
             android:theme="@style/AppTheme" />
@@ -136,33 +137,40 @@
         <activity android:name=".UI.SpecificTweetActivity" />
         <activity
             android:name=".UI.HelpActivity"
-
-            android:theme="@style/AppTheme" >
+            android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.chris.tatusafety.MainActivity" />
         </activity>
-
-        <activity android:name=".SplashScreen"
+        <activity
+            android:name=".SplashScreen"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".UI.FormActivity"></activity>
+        <activity android:name=".UI.FormActivity" />
 
         <service
             android:name=".services.FetchAddressIntentService"
-            android:exported="false"/>
+            android:exported="false" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <!--<meta-data-->
-            <!--android:name="com.google.android.maps.v2.API_KEY"-->
-            <!--android:value="AIzaSyB3AAJaVlM3T9K4LKdV2iWNXH2ZJO_W9VA"/>-->
+        <!-- <meta-data -->
+        <!-- android:name="com.google.android.maps.v2.API_KEY" -->
+        <!-- android:value="AIzaSyB3AAJaVlM3T9K4LKdV2iWNXH2ZJO_W9VA"/> -->
+        <activity android:name=".UI.Welcome_Activity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
