--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="16" />
+
     <uses-permission android:name="com.chris.tatusafety.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -24,7 +25,6 @@
     <permission
         android:name="com.chris.tatusafety.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
-
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -64,9 +64,7 @@
             tools:replace="android:theme" />
         <activity
             android:name=".UI.LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name="com.facebook.accountkit.ui.AccountKitEmailRedirectActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -97,9 +95,9 @@
         <activity
             android:name=".UI.HistoryActivity"
             android:theme="@style/AppTheme">
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value="com.chris.tatusafety.MainActivity" />
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.chris.tatusafety.MainActivity" />
         </activity>
 
         <receiver android:name=".NetWatcher">
@@ -144,8 +142,7 @@
         <activity android:name=".UI.SpecificTweetActivity" />
         <activity
             android:name=".UI.HelpActivity"
-            android:theme="@style/AppTheme">
-        </activity>
+            android:theme="@style/AppTheme"></activity>
         <activity
             android:name=".SplashScreen"
             android:theme="@style/AppTheme.NoActionBar">
@@ -168,9 +165,8 @@
         <!-- <meta-data -->
         <!-- android:name="com.google.android.maps.v2.API_KEY" -->
         <!-- android:value="AIzaSyB3AAJaVlM3T9K4LKdV2iWNXH2ZJO_W9VA"/> -->
-        <activity android:name=".UI.Welcome_Activity">
-
-        </activity>
+        <activity android:name=".UI.Welcome_Activity"></activity>
+        <activity android:name=".UI.Compose_Tweet"></activity>
     </application>
 
 </manifest>
