--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.chris.tatusafety"
         minSdkVersion 15
         targetSdkVersion 25
-        versionCode 5
-        versionName "1.3.4"
+        versionCode 7
+        versionName "1.4 .0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
