--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 26
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.chris.tatusafety"
         minSdkVersion 15
@@ -12,6 +12,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
+        flavorDimensions "default"
     }
     buildTypes {
         release {
@@ -29,9 +30,8 @@ android {
     sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
     productFlavors {
         free {
-            targetSdkVersion 25
-            minSdkVersion 15
-
+            targetSdkVersion 24
+            minSdkVersion 22
         }
     }
 }
@@ -41,25 +41,27 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.google.android.gms:play-services-maps:11.8.0'
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.loopj.android:android-async-http:1.4.9'
-    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:design:27.0.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    annotationProcessor 'com.jakewharton:butterknife:7.0.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.facebook.android:account-kit-sdk:4.+'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.googlecode.libphonenumber:libphonenumber:8.4.0'
+    compile 'com.android.support:support-compat:27.0.2'
+    compile 'com.googlecode.libphonenumber:libphonenumber:8.8.9'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.makeramen:roundedimageview:2.3.0'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
-    compile 'com.google.android.gms:play-services-maps:11.0.2'
-    compile 'com.google.android.gms:play-services-location:11.0.2'
-    compile 'com.android.support:support-vector-drawable:25.3.1'
-    compile 'com.google.firebase:firebase-database:11.0.2'
-    compile 'com.firebaseui:firebase-ui-database:0.4.1'
-    compile 'com.google.firebase:firebase-auth:11.0.2'
+    compile 'com.google.android.gms:play-services-location:11.8.0'
+    compile 'com.android.support:support-vector-drawable:26.1.0'
+    compile 'com.google.firebase:firebase-database:11.8.0'
+    compile 'com.firebaseui:firebase-ui-database:3.2.1'
+    compile 'com.google.firebase:firebase-auth:11.8.0'
     compile 'org.parceler:parceler-api:1.1.6'
     compile 'se.akerfeldt:okhttp-signpost:1.1.0'
     compile 'oauth.signpost:signpost-core:1.2.1.2'
@@ -69,5 +71,7 @@ dependencies {
     compile 'com.twitter.sdk.android:tweet-ui:3.1.1'
     compile 'com.twitter.sdk.android:tweet-composer:3.1.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.dagger:dagger:2.14.1'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
 }
 apply plugin: 'com.google.gms.google-services'
