--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -162,11 +162,11 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <!-- <meta-data -->
-        <!-- android:name="com.google.android.maps.v2.API_KEY" -->
-        <!-- android:value="AIzaSyB3AAJaVlM3T9K4LKdV2iWNXH2ZJO_W9VA"/> -->
-        <activity android:name=".UI.Welcome_Activity"></activity>
-        <activity android:name=".UI.Compose_Tweet"></activity>
+         <meta-data
+         android:name="com.google.android.maps.v2.API_KEY"
+         android:value="AIzaSyB3AAJaVlM3T9K4LKdV2iWNXH2ZJO_W9VA"/>
+        <!--<activity android:name=".UI.Welcome_Activity"></activity>-->
+        <!--<activity android:name=".UI.Compose_Tweet"></activity>-->
     </application>
 
 </manifest>
