--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
     <uses-permission-sdk-23 android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission-sdk-23 android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission-sdk-23 android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
     <permission
         android:name="com.chris.tatusafety.permission.MAPS_RECEIVE"
@@ -64,7 +65,9 @@
             tools:replace="android:theme" />
         <activity
             android:name=".UI.LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
         <activity android:name="com.facebook.accountkit.ui.AccountKitEmailRedirectActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -116,6 +119,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.chris.tatusafety.MainActivity" />
         </activity>
+
         <activity
             android:name=".maps.MapsActivity"
             android:theme="@style/Yonko">
@@ -123,9 +127,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.chris.tatusafety.MainActivity" />
         </activity>
+
         <activity
             android:name=".Stage"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
         <activity
             android:name=".UI.TweetsActivity"
             android:parentActivityName=".MainActivity"
@@ -134,10 +141,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.chris.tatusafety.MainActivity" />
         </activity>
+
         <activity android:name=".UI.SpecificTweetActivity" />
+
         <activity
             android:name=".UI.HelpActivity"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme">
+
+        </activity>
         <activity
             android:name=".SplashScreen"
             android:theme="@style/AppTheme.NoActionBar">
@@ -155,9 +166,7 @@
 
         <service android:name=".UI.SpeedActivity"
             android:theme="@style/AppTheme">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.chris.tatusafety.MainActivity" />
+
 
         </service>
         <meta-data
@@ -175,7 +184,6 @@
          <!--android:name="com.google.android.maps.v2.API_KEY"-->
          <!--android:value="AIzaSyB3AAJaVlM3T9K4LKdV2iWNXH2ZJO_W9VA"/>-->
         <activity android:name=".UI.Welcome_Activity"></activity>
-        <!--<activity android:name=".UI.Compose_Tweet"></activity>-->
     </application>
 
 </manifest>
